apps/dashy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - dashy.home.alden.ai
  rules:
  - backendRefs:
    - name: argocd-server.argocd.svc.cluster.local
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /argocd
  - backendRefs:
    - name: dashy
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
