apps/dashy/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dashy-virtualservice
spec:
  hosts:
    - dashy.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: dashy.dashy.svc.cluster.local
            port:
              number: 8080
